--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.11.0",
+    "framer-motion": "^12.15.0",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.296",
     "react-router-dom": "^7.6.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.18",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.6"
   },
